prepare to merge

--- a/common/dspcalculus.tex
+++ b/common/dspcalculus.tex
@@ -139,16 +139,10 @@ Is digital differentiation equivalent to continuous differentiation?\footnote{\c
     && \text{for $0\le\omega\le\pi$}
 \end{align*}
 
-
-%---------------------------------------
-%\newpage\mbox{} 
-%---------------------------------------
-
-
-%---------------------------------------
-%\newpage\mbox{} 
-%---------------------------------------
-Digital Differentiation Method \#2: \ope{Central Difference}\footnote{\citerpgc{williams1986}{69}{9780132018562}{Difference}}
+%=======================================
+\subsection{Digital Differentiation Method \#2: \ope{Central Difference}}
+\footnote{\citerpgc{williams1986}{69}{9780132018562}{Difference}}
+%=======================================
  
 \begin{align*}
   \fy[n]
@@ -166,9 +160,6 @@ Digital Differentiation Method \#2: \ope{Central Difference}\footnote{\citerpgc{
 \end{align*}
 
 
-%---------------------------------------
-%\newpage\mbox{} 
-%---------------------------------------
 \begin{figure}
   \centering 
   \includegraphics{graphics/cendiff.pdf}
@@ -198,10 +189,12 @@ Central Difference = Continuous Differentiation?\footnote{\citerpgc{williams1986
 
 
 %=======================================
-\section{Digital integration
+\section{Digital integration}
 %=======================================
-Digital Integration Method \#1: \opd{Summation}
- 
+%=======================================
+\subsection{Digital Integration Method \#1: \opd{Summation}}
+%=======================================
+
 {\begin{align*}
   \fy[n]
     &\eqd \fx[n] + \mcom{\fx[n-1] + \fx[n-2] + \fx[n-3] + \fx[n-4] + \fx[n-5] + \cdots}{{$\fy[n-1]$}}
@@ -225,7 +218,9 @@ Digital Integration Method \#1: \opd{Summation}
 %---------------------------------------
 %\newpage\mbox{} 
 %---------------------------------------
-Digital Integration Method \#2: \opd{Trapezoid}
+%=======================================
+\subsection{Digital Integration Method \#2: \opd{Trapezoid}}
+%=======================================
  
 {\begin{align*}
   \fy[n]
@@ -246,11 +241,10 @@ Digital Integration Method \#2: \opd{Trapezoid}
   \end{array}}
 \end{align*}}
 
+%=======================================
+\subsection{Digital Integration Method \#3:  \opd{Simpson's Rule}}
+%=======================================
 
-%%---------------------------------------
-%\newpage\mbox{} 
-%%---------------------------------------
-%Digital Integration Method \#2: \opd{Simpson's Rule}
 % 
 %{\begin{align*}
 %  \fy[n]
