--- a/2019xcordef/abstract.tex
+++ b/2019xcordef/abstract.tex
@@ -8,10 +8,15 @@ The literature offers varying and in general incompatible definitions of the
 \fncte{cross-correlation} function $\Rxy(n,m)$ and its \ope{jointly wide-sense stationary} special case $\Rxy(m)$.
 The choice of definition has consequences for results involving the \fncte{cross-spectral density} function 
 $\Swxy(\omega)$, and the more general Z-transform density $\Szxy(z)$.
+In some stochastic processing systems involving simple additive noise or even additive noise
+combined with non-linear operations, these varying definitions lead to identical results.
+In some other systems involving nonlinear and linear parallel operations, 
+including those involving system identification problems,
+results differ.
 \end{abstract}
 
 %\begin{asciiabstract}
-The literature offers varying and in general incompatible definitions of the cross-correlation functions Rxy(n,m) and its jointly wide-sense stationary special case Rxy(m). The choice of definition has consequences for results involving the cross-spectral density function Sxy(w), and the more general Z-transform density Sxy(z).
+The literature offers varying and in general incompatible definitions of the cross-correlation functions Rxy(n,m) and its jointly wide-sense stationary special case Rxy(m). The choice of definition has consequences for results involving the cross-spectral density function Sxy(w), and the more general Z-transform density Sxy(z). In some stochastic processing systems involving simple additive noise or even additive noise combined with non-linear operations, these varying definitions lead to identical results. In some other systems involving nonlinear and linear parallel operations, including some involving system identification problems, results differ.
 %
 %\end{asciiabstract}
 
