--- a/common/harTrig.tex
+++ b/common/harTrig.tex
@@ -98,7 +98,7 @@ There are several ways of defining the sine and cosine functions, including the 
   \item {\bf Complex exponential:} The cosine and sine functions are 
     the real and imaginary parts of the complex exponential such that\footnote{\citer{euler1748v1}}
     \\\indentx$\ds
-      \cos\fvx \eqd \Re{e^{i\fvx}}  \qquad\qquad  \sin\fvx \eqd \Im{e^{i\fvx}}
+      \cos\fvx \eqd \Real{e^{i\fvx}}  \qquad\qquad  \sin\fvx \eqd \Imag\brp{e^{i\fvx}}
       %\cos\fvx \eqd \frac{1}{2}\brp{e^{i\fvx}+e^{-i\fvx}}  
       %\qquad\qquad  
       %\sin\fvx \eqd \frac{1}{2i}\brp{e^{i\fvx}-e^{-i\fvx}}
@@ -782,7 +782,7 @@ Let $\opDif\in\clOcc$ be the differentiation operator.
 \end{corollary}
 \begin{proof}
 \begin{align*}
-  e^{ix}
+  \boxed{e^{ix}}
     &=  \cos(x) +i\sin(x)
     &&  \text{by \thme{Euler's identity}}&&\text{\xref{thm:eid}}
   \\&=  \mcom{\sum_{n\in\Znn} \frac{(-1)^nx^{2n}}{(2n)!}}{$\cos(x)$}
@@ -790,15 +790,13 @@ Let $\opDif\in\clOcc$ be the differentiation operator.
     &&  \text{by \thme{Taylor series}}&&  \text{\xref{thm:cos_taylor}}
   \\&=  \sum_{n\in\Znn} \frac{(i^2)^nx^{2n}}{(2n)!}
        +\sum_{n\in\Znn} \frac{i(i^2)^nx^{2n+1}}{(2n+1)!}
-     =  \sum_{n\in\Znn} \frac{(ix)^{2n}}{(2n)!}
+    &&=\sum_{n\in\Znn} \frac{(ix)^{2n}}{(2n)!}
        +\sum_{n\in\Znn} \frac{(ix)^{2n+1}}{(2n+1)!}
-  \\&=  \sum_{n\in\Znn\seti\Ze} \frac{(ix)^n}{n!}
+      =  \sum_{n\in\Znn\seti\Ze} \frac{(ix)^n}{n!}
        +\sum_{n\in\Znn\seti\Zo} \frac{(ix)^n}{n!}
-     =  \sum_{n\in\Znn} \frac{(ix)^n}{n!}
+      = \boxed{\sum_{n\in\Znn} \frac{(ix)^n}{n!}}
 \end{align*}
 \end{proof}
-
-
 
 %--------------------------------------
 \begin{corollary}[\thmd{Euler formulas}]
@@ -810,13 +808,13 @@ Let $\opDif\in\clOcc$ be the differentiation operator.
 \label{cor:eform}
 %--------------------------------------
 \corbox{\begin{array}{rc>{\ds}lC | rc>{\ds}lC}
-   \cos(x) &=& \Re\Big(e^{ix}\Big) = \frac{e^{ix} + e^{-ix}}{2 } & \forall x\in\R &
-   \sin(x) &=& \Im\Big(e^{ix}\Big) = \frac{e^{ix} - e^{-ix}}{2i} & \forall x\in\R
+   \cos(x) &=& \Real\Big(e^{ix}\Big) = \frac{e^{ix} + e^{-ix}}{2 } & \forall x\in\R &
+   \sin(x) &=& \Imag\Big(e^{ix}\Big) = \frac{e^{ix} - e^{-ix}}{2i} & \forall x\in\R
   \end{array}}
 \end{corollary}
 \begin{proof}
 \begin{align*}
-  \Re\Big(e^{ix}\Big)
+  \boxed{\Real\Big(e^{ix}\Big)}
     &\eqd \frac{e^{ix} + \brp{e^{ix}}^\invo}{2}
      = \frac{e^{ix} + e^{-ix}}{2}
     && \text{by definition of $\Re$}
@@ -825,10 +823,10 @@ Let $\opDif\in\clOcc$ be the differentiation operator.
     && \text{by \thme{Euler's identity}}
     && \text{\xref{thm:eid}}
   \\&= \frac{\cos( x) + i\sin( x)}{2} + \frac{\cos( x) - i\sin( x)}{2}
-  \\&= \frac{\cos( x)}{2} + \frac{\cos( x)}{2}
-     = \cos(x)
-\\ \\
-  \Im\Big(e^{ix}\Big)
+   &&= \frac{\cos( x)}{2} + \frac{\cos( x)}{2}
+   &&= \boxed{\cos(x)}
+  \\
+  \boxed{\Imag\Big(e^{ix}\Big)}
     &\eqd \frac{e^{ix} - \brp{e^{ix}}^\invo}{2i}
      = \frac{e^{ix} - e^{-ix}}{2i}
     && \text{by definition of $\Im$}
@@ -838,9 +836,9 @@ Let $\opDif\in\clOcc$ be the differentiation operator.
     && \text{\xref{thm:eid}}
   \\&= \frac{\cos( x) + i\sin( x)}{2i}
       -\frac{\cos( x) - i\sin( x)}{2i}
-  \\&= \frac{i\sin( x)}{2i}
+   &&= \frac{i\sin( x)}{2i}
       +\frac{i\sin( x)}{2i}
-     = \sin(x)
+   &&= \boxed{\sin(x)}
 \end{align*}
 \end{proof}
 
@@ -879,7 +877,8 @@ Let $\opDif\in\clOcc$ be the differentiation operator.
        {n \choose k}
        \alpha^k \: \beta^{n-k}
   \\&= \sum_{n\in\Znn} \frac{\brp{\alpha+\beta}^n}{n!} 
-    && \text{by the \thme{Binomial Theorem}\ifsxref{polynom}{thm:binomial}}
+    && \text{by the \thme{Binomial Theorem}}
+    && \text{\ifsxref{polynom}{thm:binomial}}
   \\&= e^{\alpha+\beta}
     && \text{by \prefp{cor:eid}}
 \end{align*}
