--- a/common/polynom.tex
+++ b/common/polynom.tex
@@ -1418,7 +1418,7 @@ Let $\fieldF$ be a \structe{field}.
   {\href{http://en.wikipedia.org/wiki/Euclid}{Euclid}
    \href{http://www-history.mcs.st-andrews.ac.uk/Timelines/TimelineA.html}{($\sim$300BC)},
    \href{http://www-history.mcs.st-andrews.ac.uk/BirthplaceMaps/Places/Greece.html}{Greek mathematician},
-   demonstrating the \hie{Binomial theorem} for exponent $n=2$ as in $(x+y)^2=x^2 + 2xy + y^2$.
+   demonstrating the \thme{Binomial theorem} for exponent $n=2$ as in $(x+y)^2=x^2 + 2xy + y^2$.
     \index{Euclid}
     \index{quotes!Euclid}
     \footnotemark
@@ -1471,7 +1471,7 @@ and $\hxs{\opDif}$ in $\clF{\spC}{\spC}$ the differentiation operator.
 
 
 %---------------------------------------
-\begin{theorem}[\thm{Binomial Theorem}]
+\begin{theorem}[\thmd{Binomial Theorem}]
 \footnote{
   \citerpgc{graham1994}{162}{0201558025}{(5.12)},
   \citerpgc{rotman2010}{84}{0821847414}{Proposition 2.5},
@@ -1564,6 +1564,4 @@ but does not require any external theorem.
 \end{enumerate}
 \end{enumerate}
 \end{proof}
-
-
 
