--- a/2019xcordef/abstract.tex
+++ b/2019xcordef/abstract.tex
@@ -16,7 +16,7 @@ results differ.
 \end{abstract}
 
 %\begin{asciiabstract}
-The literature offers varying and in general incompatible definitions of the cross-correlation functions Rxy(n,m) and its jointly wide-sense stationary special case Rxy(m). The choice of definition has consequences for results involving the cross-spectral density function Sxy(w), and the more general Z-transform density Sxy(z). In some stochastic processing systems involving simple additive noise or even additive noise combined with non-linear operations, these varying definitions lead to identical results. In some other systems involving nonlinear and linear parallel operations, including some involving system identification problems, results differ.
+%The literature offers varying and in general incompatible definitions of the cross-correlation functions Rxy(n,m) and its jointly wide-sense stationary special case Rxy(m). The choice of definition has consequences for results involving the cross-spectral density function Sxy(w), and the more general Z-transform density Sxy(z). In some stochastic processing systems involving simple additive noise or even additive noise combined with non-linear operations, these varying definitions lead to identical results. In some other systems involving nonlinear and linear parallel operations, including some involving system identification problems, results differ.
 %
 %\end{asciiabstract}
 
