bsplines. alternate Fourier Analysis proof

--- a/common/spectral.tex
+++ b/common/spectral.tex
@@ -274,9 +274,6 @@ Let $\opA\in\clB{\spX}{\spY}$ be an operator.
   }
 \end{theorem}
 
-
-
-
 %---------------------------------------
 \begin{theorem}[\thmd{Spectral Theorem}]
 \footnote{
@@ -381,7 +378,7 @@ Examples of \prop{Fredholm operators} include
 \label{thm:intop_KkKk}
 %---------------------------------------
 Let $\opK$ be a \prop{Fredholm operator} with kernel $\kappa(t,s)$ and adjoint $\opKa$.
-\formbox{
+\thmbox{
   \brs{\opK\ff}(t) = \int_\setA \kappa(t,s) \ff(s) \dds
   \qquad\iff\qquad
   \brs{\opKa\ff}(t) = \int_\setA \kappa^\ast(s,t) \ff(s) \dds
@@ -426,7 +423,7 @@ Let $\opK$ be a \prop{Fredholm operator} with kernel $\kappa(t,s)$ and adjoint $
   }
 %---------------------------------------
 Let $\opK$ be an \prop{Fredholm operator} with kernel $\kappa(t,s)$ and adjoint $\opKa$.
-\formbox{
+\thmbox{
   \mcom{\opK=\opKa}{$\opK$ is self-adjoint}
   \qquad\iff\qquad
   \mcom{\kappa(t,s) = \kappa^\ast(s,t)}{kernel is \prop{conjugate symmetric}}
@@ -456,7 +453,7 @@ Let $\opK$ be an \prop{Fredholm operator} with kernel $\kappa(t,s)$ and adjoint 
 %---------------------------------------
 Let $\opK$ be an \prop{Fredholm operator} with kernel $\kappa(t,s)$ and
 eigensystem $\seq{(\lambda_n,\phi_n(t))}{n\in\Z}$.
-\formbox{
+\thmbox{
   \left.\begin{array}{ll}
     1.& \mcom{\int_a^b \int_a^b \kappa(t,s) \ff(t) \ff^\ast(s) \ds\dt \ge 0}{positive} \quad \text{and }\\
     2.& \kappa(t,s) \text{ is continuous on } [a,b]\times[a,b]
