dsp. more z-domain geometric interpretation references

--- a/common/dspcalculus.tex
+++ b/common/dspcalculus.tex
@@ -6,22 +6,6 @@
 \chapter{DSP Calculus}
 %=======================================
 
-%\fbox{displacement}\qquad\fbox{velocity}\qquad\fbox{acceleration}
-%
-%How are they related?
-%
-%
-%%---------------------------------------
-%% Definitions
-%%---------------------------------------
-
-
-%\defbox{\begin{array}{rc>{\ds}l}
-%  \fv(t) &\eqd& \ddt \fx(t)
-%  \\
-%  \fa(t) &\eqd& \ddt \fv(t)
-%\end{array}}
- 
 %=======================================
 \section{Fourier Transform calculus}
 %=======================================
@@ -61,9 +45,6 @@
 \end{proof}
 
 %---------------------------------------
-%\newpage\mbox{} 
-%---------------------------------------
-%---------------------------------------
 \begin{proposition}
 %---------------------------------------
 \mbox{}\\
@@ -89,6 +70,7 @@
   \\&= \brlr{\frac{1}{-i\omega}e^{-i\omega v}}_{v=0}^{v=+\infty} X(\omega)
      \quad=\quad \boxed{\frac{1}{i\omega} X(\omega)}
 \end{align*}
+\end{proof}
 
 %=======================================
 \section{Digital differentiation methods}
