--- a/common/systemid.tex
+++ b/common/systemid.tex
@@ -1939,7 +1939,7 @@ Coherence has two basic purposes:
         are the estimates $\estHa$ and $\estHb$ \xxref{def:H1}{def:H2}.
         If the coherence is $0.70$ or above, then we can have high confidence that
         the estimates $\estHa$ and $\estHb$ are ``good" 
-        estimates.\footnote{\citerpgc{liang2015}{363}{365}{1498702341}{7.4.2\scshape Coherece Function}}
+        estimates.\footnote{\citerppgc{liang2015}{363}{365}{1498702341}{7.4.2\scshape Coherece Function}}
 \end{enume}
 
 %=======================================
@@ -1975,14 +1975,14 @@ Let $\opS$ be a \structe{system} with input $\rvx(n)$ and output $\rvy(n)$.
 \end{proposition}
 \begin{proof}
 \begin{align*}
-  \oCxy(\omega) 
+  \boxed{\oCxy(\omega)}
     &\eqd \frac{\abs{\Swxy}^2}{\Swxx\Swyy}
     && \text{by definition of $\oCxy$}
     && \text{\xref{def:oCxy}}
-  \\&= \frac{\ds\frac{\Swxy^\ast}{\Swxx}}
-            {\ds\frac{\Swyy}     {\Swxy}}
-  \\&\eqd \frac{\estHa}
-               {\estHb}
+  \\&= \frac{\ds\ffrac{\Swxy^\ast}{\Swxx}}
+            {\ds\ffrac{\Swyy}     {\Swxy}}
+     \eqd \boxed{\frac{\estHa}
+                      {\estHb}}
     && \text{by definitions of $\estHa$ and $\estHb$}
     && \text{\xxref{def:H1}{def:H2}}
 \end{align*}
