--- a/common/zchar.tex
+++ b/common/zchar.tex
@@ -86,7 +86,11 @@ Note the following:
 \end{tabular}
 
 The pole zero locations of a digital filter determine the magnitude and 
-phase frequency response of the digital filter.\footnote{\citerpp{cadzow}{90}{91}}
+phase frequency response of the digital filter.\footnote{%
+  \citerpp{cadzow}{90}{91}
+  \citerppgc{ifeachor1993}{134}{136}{020154413X}{\textsection ``1.5.3 Geometric evaluation of frequency response"}, 
+  \citerppgc{ifeachor2002}{201}{203}{0201596199}{\textsection ``4.5.3 Geometric evaluation of frequency response"}
+  }
 This can be seen by representing the pole and zero vectors in the complex z-plane.
 Each of these vectors has a magnitude $M$ and a direction $\theta$.
 Also, each factor $(z-z_i)$ and $(z-p_i)$ can be represented as vectors as well
