close out branch

--- a/common/expectation.tex
+++ b/common/expectation.tex
@@ -303,7 +303,8 @@ Then
 %--------------------------------------
 \begin{example}
 \footnote{
-  \citerppgc{shao2003}{31}{32}{0387953825}{``Example 1.18"}
+  \citerppgc{shao2003}{31}{32}{0387953825}{``Example 1.18"},
+  \citerpgc{dekking2006}{110}{1846281687}{``8.5 Solutions to the quick exercises"}
   }
 \label{ex:jensen}
 %--------------------------------------
@@ -312,6 +313,7 @@ are the following:
 \exbox{\begin{array}{>{\ds}rc>{\ds}l}
     \brp{\pE\rvX}^{-1} &<& \pE\brp{\rvX^{-1}}
   \\\pE\brp{\log\rvX}  &<& \log\brp{\pE\rvX}
+  \\e^{-\pE\rvX}       &\le& \pE\brs{e^{-\rvX}}
 \end{array}}
 \end{example}
 
