--- a/common/zchar.tex
+++ b/common/zchar.tex
@@ -65,12 +65,6 @@
 \end{align*}
 \end{proof}
 
-
-
-
-
-
-
 %=======================================
 \section{Pole and zero location analysis}
 %=======================================
@@ -87,7 +81,7 @@ Note the following:
 
 The pole zero locations of a digital filter determine the magnitude and 
 phase frequency response of the digital filter.\footnote{%
-  \citerpp{cadzow}{90}{91}
+  \citerpp{cadzow}{90}{91},
   \citerppgc{ifeachor1993}{134}{136}{020154413X}{\textsection ``1.5.3 Geometric evaluation of frequency response"}, 
   \citerppgc{ifeachor2002}{201}{203}{0201596199}{\textsection ``4.5.3 Geometric evaluation of frequency response"}
   }
