definitions for hm, gm, am, and average

--- a/common/estimate.tex
+++ b/common/estimate.tex
@@ -274,32 +274,33 @@ defbox{
   }
 %---------------------------------------
 \thmbox{\begin{array}{rclD}
-  \pE\hat{\mean} &=& \mean                   & (\prope{unbiased})
+  \pE\meanest &=& \mean                   & (\prope{unbiased})
   \\
-  \mse(\hat{\mean}) &=& \frac{\sigma^2}{\xN} & (\prope{consistent})
+  \mse(\meanest) &=& \frac{\sigma^2}{\xN} & (\prope{consistent})
 \end{array}}
 \end{theorem}
 \begin{proof}
 \begin{align*}
-  \pE\hat{mean}
+  \pE\meanest
     &\eqd \pE \frac{1}{\xN}\sum_{n=1}^{n=\xN} \rvx_n
-    && \text{by definition of \fncte{arithmetic mean}}
+    && \text{by definition of \fncte{average}}
+    && \text{\xref{def:average}}
   \\&=  \frac{1}{\xN}\sum_{n=1}^{n=\xN} \pE\rvx_n
     && \text{by \prope{linearity} of $\pE$}
     && \text{\xref{thm:pE_linop}}
   \\&=  \frac{1}{\xN}\xN\mean
     && \text{by \prope{stationarity} of $\rvx_n$}
   \\
-  \mse(\hat{\mean}) 
-    &= \pE\brp{\hat{\mean}-\pE\hat{\mean}}^2
-        +\brp{\pE\hat{\mean}-\mean}^2
+  \mse(\meanest) 
+    &= \pE\brp{\meanest-\pE\meanest}^2
+        +\brp{\pE\meanest-\mean}^2
     && \text{by \prefp{thm:mse}}
-  \\&= \pE\brp{\hat{\mean}-\mean}^2
+  \\&= \pE\brp{\meanest-\mean}^2
         +\cancelto{0}{\brp{\mean-\mean}^2}
     && \text{by previous result}
-  \\&= \pE\brs{\hat{\mean}^2+\mean^2 -2\hat{\mean}\mean}
-  \\&= \pE\brs{\hat{\mean}^2}+\mean^2 -2\mean\pE\hat{\mean}
-  \\&= \pE\brs{\hat{\mean}^2} - \mean^2
+  \\&= \pE\brs{\meanest^2+\mean^2 -2\meanest\mean}
+  \\&= \pE\brs{\meanest^2}+\mean^2 -2\mean\pE\meanest
+  \\&= \pE\brs{\meanest^2} - \mean^2
   \\&= \pE\brs{\frac{1}{\xN}\sum_{n=1}^{\xN}\rvx_n \frac{1}{\xN}\sum_{m=1}^{\xN}\rvx_m } - \mean^2
   \\&= \frac{1}{\xN^2}\pE\brs{\sum_{n=1}^{\xN}\sum_{m=1}^{\xN}\rvx_n \rvx_m } - \mean^2
   \\&= \frac{1}{\xN^2}\sum_{n=1}^{\xN}\sum_{m=1}^{\xN}\pE\brs{\rvx_n \rvx_m } - \mean^2
