--- a/common/sty/math.sty
+++ b/common/sty/math.sty
@@ -1546,8 +1546,6 @@
 %--------------------------------------
 % probability density functions
 %--------------------------------------
-%20181122deprecated% \newcommand{\pp}    [1][p]{\mathfnct{#1}}% pdf (probability density function)
-%20181122deprecated% \newcommand{\pc}    [1][c]{\mathfnct{#1}}% cdf (cummulative distribution function)
  \newcommand{\pp}{\mathfnct{p}}% pdf (probability density function)
  \newcommand{\pc}{\mathfnct{c}}% cdf (cummulative distribution function)
  \newcommand{\ppx}   [1][X]{\pp_{\mbox{\tiny$\fnct{#1}$}}}% pdf of X
@@ -1905,6 +1903,8 @@
  \newcommand{\fn  }   {\fnct{n}}
 
 \newcommand{\mse}[0]{\mathfnct{mse}}
+\newcommand{\mean}{\mu}
+\newcommand{\meanest}{\hat{\mean}}
 
 %--------------------------------------
 % Information theory
