--- a/common/sums.tex
+++ b/common/sums.tex
@@ -476,6 +476,36 @@ Let $\Rx$ be the set of extended real numbers $\brp{\Rx\eqd\R\setu\setn{-\infty,
 \end{proof}
 
 %--------------------------------------
+\begin{definition}
+%\footnote{
+%  \citerpg{bullen2003}{71}{1402015224},
+%  \citerpg{bollobas1999}{5}{0521655773},
+%  \citorppc{cauchy1821}{457}{459}{Note II, theorem 17},
+%  \citorp{jensen1906}{183}
+%  }
+\label{def:am}
+\label{def:gm}
+\label{def:hm}
+\label{def:average}
+%--------------------------------------
+Let $\tuplen{x_n}_1^\xN$ be a tuple. Let $\tuplen{\lambda_n}_1^\xN$ be a tuple of weighting values such that
+$\ds\sum_{n=1}^\xN\lambda_n=1$.
+\defbox{\begin{array}{Mrc>{\ds}l}
+  The \fnctd{harmonic mean} of $\tuplen{x_n}$ is defined as 
+    & \mu_h &\eqd& \brp{\sum_{n=1}^\xN \lambda_n \frac{1}{x_n}}^{-1}
+    \\
+  The \fnctd{geometric mean} of $\tuplen{x_n}$ is defined as 
+    & \mu_g &\eqd& \sum_{n=1}^\xN x_n^{\lambda_n}
+    \\
+  The \fnctd{arithmetic mean} of $\tuplen{x_n}$ is defined as 
+    & \mu_a &\eqd& \sum_{n=1}^\xN \lambda_n x_n
+    \\
+  The \fnctd{average} of $\tuplen{x_n}$ is defined as 
+    & \mu_a &\eqd& \frac{1}{\xN}\sum_{n=1}^\xN x_n
+  }
+\end{definition}
+
+%--------------------------------------
 \begin{corollary}
 \footnote{
   \citerpg{bullen2003}{71}{1402015224},
