--- a/common/sums.tex
+++ b/common/sums.tex
@@ -502,7 +502,7 @@ $\ds\sum_{n=1}^\xN\lambda_n=1$.
     \\
   The \fnctd{average} of $\tuplen{x_n}$ is defined as 
     & \mu_a &\eqd& \frac{1}{\xN}\sum_{n=1}^\xN x_n
-  }
+\end{array}}
 \end{definition}
 
 %--------------------------------------
