--- a/common/estimate.tex
+++ b/common/estimate.tex
@@ -214,7 +214,7 @@ Let $\fs(t;\theta)$ be a function with unknown parameter $\theta$.
 \begin{definition}
 \label{def:mse}
 %---------------------------------------
-defbox{
+\defbox{
   \mse(\est) \eqd \pE\brs{\brp{\hat{\theta}-\theta}^2}
   }
 \end{definition}
