prepare for possible merge from rsd20190714

--- a/common/symbol_detection.tex
+++ b/common/symbol_detection.tex
@@ -44,7 +44,7 @@ expressions
             2\int_{t\in\R} \fr(t)\left[\pderiv{}{\phi}s(t;\phi)\right] \dt =
             \pderiv{}{\phi}\int_{t\in\R} s^2(t;\phi) \dt
             \right)
-            \hspace{1cm}\mbox{by \prefp{thm:estML_general}}
+            \qquad\mbox{by \prefp{thm:estML_general}}
    \\&=    \arg_\phi\left(
             2\int_{t\in\R} \fr(t)\left[\pderiv{}{\phi}s(t;\phi)\right] \dt =
             \pderiv{}{\phi}\norm{s(t;\phi)}^2 \dt
@@ -232,10 +232,10 @@ the optimal ML estimator of $m$ is
 If an FSK modulation space let
 \[
 \begin{array}{rcl l| lllll}
-   z_2 &\eqd& \fdotr_{1}(1) - \fdotr_{2}(1) &\hspace{1cm}& z_2>0 &\implies& \fdotr_1>\fdotr_2 &|& m=1 \\
-   z_3 &\eqd& \fdotr_{1}(1) - \fdotr_{3}(1) &\hspace{1cm}& z_3>0 &\implies& \fdotr_1>\fdotr_3 &|& m=1 \\
+   z_2 &\eqd& \fdotr_{1}(1) - \fdotr_{2}(1) &\qquad& z_2>0 &\implies& \fdotr_1>\fdotr_2 &|& m=1 \\
+   z_3 &\eqd& \fdotr_{1}(1) - \fdotr_{3}(1) &\qquad& z_3>0 &\implies& \fdotr_1>\fdotr_3 &|& m=1 \\
        &\vdots&                               &            & \\
-   z_M &\eqd& \fdotr_{1}(1) - \fdotr_{M}(1) &\hspace{1cm}& z_M>0 &\implies& \fdotr_1>\fdotr_M &|& m=1 \\
+   z_M &\eqd& \fdotr_{1}(1) - \fdotr_{M}(1) &\qquad& z_M>0 &\implies& \fdotr_1>\fdotr_M &|& m=1 \\
 \end{array}
 \]
 
