mean estimation  using arithmetic mean and average

--- a/common/math/graphics/latestimation.tex
+++ b/common/math/graphics/latestimation.tex
@@ -30,7 +30,7 @@
    % pdf known
    %------------------------------------
    \rput[l](-8.9,-3){\rnode{meansq}{\psframebox{\parbox{50mm}{\centering
-     \opb{mean square}
+     \opb{minimum mean square}
      \\$\ds\estMS\eqd\argmin_{\theta} \E\norm{\fCost(\theta,\pdfp(\fx,\fy))}^2$
      }}}}%
    %
@@ -40,7 +40,7 @@
    %
    \rput(0,-5){\rnode{MAP}{\psframebox{\parbox{50mm}{\centering
      \opb{MAP}
-     \\$\ds\estMAP\eqd\arg\max_{\theta} \pP{\fx(t;\theta)|\fy(t)}$
+     \\$\ds\estMAP\eqd\argmax_{\theta} \pP{\fx(t;\theta)|\fy(t)}$
      }}}}%
    %
    \rput(0,-7){\rnode{ML}{\psframebox{\parbox{50mm}{\centering
@@ -52,7 +52,7 @@
    %------------------------------------
    \rput[r](8.9,-3){\rnode{minimax}{\psframebox{\parbox{50mm}{\centering
      \opb{mini-max}
-     \\$\ds\estMM\eqd\arg\min_{\theta}\max_{\pdfp}\fCost(\theta,\pdfp(\fx,\fy))$
+     \\$\ds\estMM\eqd\argmin_{\theta}\max_{\pdfp}\fCost(\theta,\pdfp(\fx,\fy))$
      }}}}%
    \rput[r](8.9,-5){\rnode{np}{\psframebox{\parbox{50mm}{\centering
      \opb{Neyman-Pearson}
