--- a/common/sty/math.sty
+++ b/common/sty/math.sty
@@ -1850,11 +1850,12 @@
  \newcommand{\estn}   [1][\theta] {\est[#1]{}}    % no subscript
  \newcommand{\estMAP} [1][\theta] {\est[#1]{map}} % maximum apriori
  \newcommand{\estML}  [1][\theta] {\est[#1]{ml}}  % maximum likelihood
- \newcommand{\estB}   [1][\theta] {\est[#1]{b}}   % Bayesian
+ \newcommand{\estB}   [1][\theta] {\est[#1]{B}}   % Bayesian
  \newcommand{\estMM}  [1][\theta] {\est[#1]{mm}}  % minimax
  \newcommand{\estNP}  [1][\theta] {\est[#1]{np}}  % Neyman-Pearson
  \newcommand{\estMS}  [1][\theta] {\est[#1]{mms}} % minimum mean square
  \newcommand{\estLS}  [1][\theta] {\est[#1]{ls}} % least square
+ \newcommand{\estT}    {\hat{\theta}}     % estimated parameter
  \newcommand{\estH}    {\hat{\fH}}     % estimated transfer function
  \newcommand{\estHs}   {\estH_{\mathsfup{s}}}  % scaled transfer function estimator
  \newcommand{\estHkp}  {\estH_{\mathsfup{\kappa}}}  % White's transfer function estimator
