--- a/common/estimate.tex
+++ b/common/estimate.tex
@@ -165,18 +165,18 @@ Let $\fs(t;\theta)$ be a function with unknown parameter $\theta$.
 \end{align*}
 \end{proof}
 
-%======================================
-\section{Parameter estimation}
-%======================================
 %---------------------------------------
 \begin{definition}
 \label{def:mse}
 %---------------------------------------
-\defbox{
-  \mse(\estT) \eqd \pE\brs{\brp{\estT-\theta}^2}
+\defboxt{
+  The \fnctd{mean square error} $\mse(\estT)$ of an estimate $\estT$ of a parameter $\theta$ is defined as
+  \\\indentx$\ds\mse(\estT) \eqd \pE\brs{\brp{\estT-\theta}^2}$
   }
 \end{definition}
 
+The \fncte{mean square error} of $\estT$ can be expressed as the sum of two components: 
+the variance of $\estT$ and the bias of $\estT$ squared (next Theorem).
 %---------------------------------------
 \begin{theorem}
 \label{thm:mse}
@@ -224,104 +224,6 @@ Let $\fs(t;\theta)$ be a function with unknown parameter $\theta$.
 \end{align*}
 \end{proof}
 
-%---------------------------------------
-\begin{theorem}
-\label{thm:mse_mean}
-%---------------------------------------
-Let $\ds\meanest\eqd\sum_{n=1}^\xN \lambda_n \rvx_n$ with $\sum_{n=1}^{\xN}\lambda_n=1$
-be the \fncte{arithmetic mean} \xref{def:am}.
-
-\thmbox{
-  \brb{\begin{array}{FMD}
-      (A).& $\seqn{\rvx_n}$ is \prope{wide sense stationary} & and
-    \\(B).& $\mu\eqd\pE\rvx_n$                               & and
-    \\(C).& $\seqn{\rvx_n}$ is \prope{uncorrelated}          & and
-    \\(D).& \mc{2}{M}{$\ds\meanest\eqd\sum_{n=1}^\xN \lambda_n \rvx_n$ (\fncte{arithmetic mean})}
-  \end{array}}
-  \implies
-  \brb{\begin{array}{FrclDD}
-      (1).& \pE\meanest    &=& \mean                               & (\prope{unbiased})   & and
-    \\(2).& \mse(\meanest) &=& \sigma^2\sum_{n=1}^{\xN}\lambda_n^2 &
-  \end{array}}
-  }
-\end{theorem}
-\begin{proof}
-\begin{align*}
-  \pE\meanest
-    &\eqd \pE \sum_{n\in\Z} \lambda_n\rvx_n
-    && \text{by definition of \fncte{arithmetic mean}}
-    && \text{\xref{def:am}}
-  \\&=  \sum_{n\in\Z} \lambda_n\pE\rvx_n
-    && \text{by \prope{linearity} of $\pE$}
-    && \text{\xref{thm:pE_linop}}
-  \\&=  \mean\sum_{n\in\Z}\lambda_n
-    && \text{by \prope{WSS} hypothesis}
-    && \text{(A)}
-  \\&=  \mean
-    && \text{by $\sum\lambda_n=1$ hypothesis}
-    && \text{\xref{def:am}}
-  \\
-  \var(\meanest)
-    &\eqd \pE\brp{\meanest-\pE\meanest}^2
-    && \text{by definition of \fncte{variance}}
-  \\&= \pE\brp{\meanest-\mean}^2
-    && \text{by previous result}
-  \\&= \pE\brp{\sum_{n=1}^{\xN}\lambda_n\rvx_n -\mean}^2
-    && \text{by definition of $\meanest$}
-  \\&= \pE\brs{\sum_{n=1}^{\xN}\rvx_n -\mean\mcom{\sum_{n=1}^{\xN}\lambda_n}{$1$}}^2
-  \\&= \pE\brs{\sum_{n=1}^{\xN}\lambda_n(\rvx_n-\mean)}^2
-  \\&= \pE\brs{\sum_{n=1}^{\xN}\lambda_n(\rvx_n-\mean)\sum_{m=1}^{\xN}\lambda_m(\rvx_m-\mean)}
-  \\&= \sum_{n=1}^{\xN}\sum_{m=1}^{\xN}\lambda_n\lambda_m\brp{\pE\brs{(\rvx_n-\mean)(\rvx_m-\mean)}                                     }
-  \\&= \sum_{n=1}^{\xN}\sum_{m=1}^{\xN}\lambda_n\lambda_m\brp{\pE\brs{\rvx_n\rvx_m}-\mean\pE\brs{\rvx_n}-\mean\pE\brs{\rvx_m}+\mean^2   }
-  \\&= \sum_{n=1}^{\xN}\sum_{m=1}^{\xN}\lambda_n\lambda_m\brp{\pE\brs{\rvx_n\rvx_m}-\mean^2-\mean^2+\mean^2                             }
-  \\&= \sum_{n=1}^{\xN}\sum_{m=1}^{\xN}\lambda_n\lambda_m\brp{\pE\brs{\rvx_n\rvx_m}-\mean^2                                             }
-  \\&= \mathrlap{
-       \sum_{n=1}^{\xN} \lambda_n^2 {\pE\brs{\rvx_n^2    }-\mean^2}
-     + \sum_{n=1}^{\xN}\sum_{m\neq n }\lambda_n\lambda_m\brp{\pE\brs{\rvx_n\rvx_m}-\mean^2 }
-       }
-  \\&= \mathrlap{
-       \sum_{n=1}^{\xN} \lambda_n^2 \brp{\pE\brs{\rvx_n^2    }-\mean^2                                             }
-     + \sum_{n=1}^{\xN}\sum_{m\neq n  }\lambda_n\lambda_m\brp{\pE\rvx_n\pE\rvx_m  }-\mean^2
-       }
-  \\&= \mathrlap{
-       \sum_{n=1}^{\xN} \lambda_n^2 \sigma^2
-     + \cancelto{0}{
-       \frac{1}{\xN^2}\sum_{n=1}^{\xN}\sum_{m\neq n  }\lambda_n\lambda_m\brp{\mean\mean           -\mean^2}
-       }
-       }
-  \\&= \sigma^2\sum_{n=1}^{\xN} \lambda_n^2
-  \\
-  \mse(\meanest)
-    &= \pE\brp{\meanest-\pE\meanest}^2
-        +\brp{\pE\meanest-\mean}^2
-    && \text{by \prefp{thm:mse}}
-  \\&= \sigma^2\sum_{n=1}^{\xN}\lambda_n^2 + \brp{\mean-\mean}^2
-    && \text{by previous results}
-  \\&= \sigma^2\sum_{n=1}^{\xN}\lambda_n^2
-\end{align*}
-\end{proof}
-
-%---------------------------------------
-\begin{corollary}
-\label{cor:mse_average}
-\footnote{
-  \citerpgc{kay1988}{45}{8131733564}{\textsection\scshape``3.3 Estimation Theory"}
-  }
-%---------------------------------------
-\corbox{
-  \brb{\begin{array}{FMD}
-      (A).& $\seqn{\rvx_n}$ is \prope{wide sense stationary} & and
-    \\(B).& $\mu\eqd\pE\rvx_n$                               & and
-    \\(C).& $\seqn{\rvx_n}$ is \prope{uncorrelated}          & and
-    \\(D).& \mc{2}{M}{$\ds\meanest\eqd\frac{1}{\xN}\sum_{n=1}^\xN \rvx_n$ (\fncte{average})}
-  \end{array}}
-  \implies
-  \brb{\begin{array}{FrclDD}
-      (1).& \pE\meanest &=& \mean                   & (\prope{unbiased})   & and
-    \\(2).& \mse(\meanest) &=& \frac{\sigma^2}{\xN} & (\prope{consistent})
-  \end{array}}
-  }
-\end{corollary}
 
 %======================================
 \section{System model}
@@ -547,18 +449,18 @@ Making $\opR$ optimum with respect to one of these criterion leads to
 an \hie{estimate} $\sue = \opR\opC\opT\vu$ that is also optimum
 with respect to the same criterion \xref{def:ML}.
 
-%---------------------------------------
-\begin{definition}
-%---------------------------------------
-Let the following estimates be defined as follows:
-\defbox{\begin{array}{MM>{\ds}lc>{\ds}l}
-   \opd{Bayesian}:                        &             & \estB   &\eqd& \arg\min_{\theta} C(\theta,\pdfp(s,r)) \\
-   \opd{Mean square}                      &(\opd{MS}):  & \estMS  &\eqd& \arg\min_{\theta} \pE\norm{C(\theta,\pdfp(s,r))}^2 \\
-   \opd{mini-max}                         &(\opd{MM}):  & \estMM  &\eqd& \arg\min_{\theta}\max_{\pdfp} C(\theta,\pdfp(s,r)) \\
-   \opd{maximum a-posteriori probability} &(\opd{MAP}): & \estMAP &\eqd& \arg\max_{\theta} \pP{s(t;\theta)|\fr(t)} \\
-   \opd{maximum likelihood}               &(\opd{ML}):  & \estML  &\eqd& \arg\max_{\theta} \pP{\fr(t)|s(t;\theta)}
-\end{array}}
-\end{definition}
+%20190726-see {def:ML}%%---------------------------------------
+%20190726-see {def:ML}%\begin{definition}
+%20190726-see {def:ML}%%---------------------------------------
+%20190726-see {def:ML}%Let the following estimates be defined as follows:
+%20190726-see {def:ML}%\defbox{\begin{array}{MM>{\ds}lc>{\ds}l}
+%20190726-see {def:ML}%   \opd{Bayesian}:                        &             & \estB   &\eqd& \arg\min_{\theta} C(\theta,\pdfp(s,r)) \\
+%20190726-see {def:ML}%   \opd{Mean square}                      &(\opd{MS}):  & \estMS  &\eqd& \arg\min_{\theta} \pE\norm{C(\theta,\pdfp(s,r))}^2 \\
+%20190726-see {def:ML}%   \opd{mini-max}                         &(\opd{MM}):  & \estMM  &\eqd& \arg\min_{\theta}\max_{\pdfp} C(\theta,\pdfp(s,r)) \\
+%20190726-see {def:ML}%   \opd{maximum a-posteriori probability} &(\opd{MAP}): & \estMAP &\eqd& \arg\max_{\theta} \pP{s(t;\theta)|\fr(t)} \\
+%20190726-see {def:ML}%   \opd{maximum likelihood}               &(\opd{ML}):  & \estML  &\eqd& \arg\max_{\theta} \pP{\fr(t)|s(t;\theta)}
+%20190726-see {def:ML}%\end{array}}
+%20190726-see {def:ML}%\end{definition}
 
 %======================================
 \section{Optimization in the case of additional operations}
@@ -899,8 +801,8 @@ Let $\opC=\opCan$ be an additive noise channel.
 \end{theorem}
 \begin{proof}
 \begin{align*}
-   (\fdotr_n |\theta)
-     &\eqd {\inprod{\fr(t)}{\psi_n(t)}}  |\theta
+   \pE(\fdotr_n |\theta)
+     &\eqd \brp{\inprod{\fr(t)}{\psi_n(t)}  |\theta}
    \\&=    {\inprod{\fs(t;\theta)+\fn(t)}{\psi_n(t)}}
    \\&=    {\inprod{\fs(t;\theta)}{\psi_n(t)}} +   {\inprod{\fn(t)}{\psi_n(t)}}
    \\&=    \inprod{\sum_{k=1}^\xN \fdots_k(\theta) \psi_k(t)}{\psi_n(t)} + \fdotn_n
