sufficient statistic theorem clean-up. switch (s,r,n) to (x,y,v)

--- a/common/bib/digcom.bib
+++ b/common/bib/digcom.bib
@@ -539,7 +539,7 @@
   publisher    = {Prentice Hall Inc},
   address      = {Upper Saddle River},
   year         = {1996},
-  isbn         = {0-13-125295-X},
+  isbn         = {013125295X},
   url          = {http://engr.smu.edu/ee/mds/},
   }
 
