--- a/common/sty/math.sty
+++ b/common/sty/math.sty
@@ -1898,6 +1898,9 @@
  \newcommand{\opCagn} {\opC_{\mathsfup{agn}}}
  \newcommand{\opCawn} {\opC_{\mathsfup{awn}}}
  \newcommand{\fdotr}  {\dot{r}}
+ \newcommand{\fdotx}  {\dot{x}}
+ \newcommand{\fdoty}  {\dot{y}}
+ \newcommand{\fdotv}  {\dot{v}}
  \newcommand{\fdotn}  {\dot{n}}
  \newcommand{\fdotlam}{\dot{\lambda}}
  \newcommand{\fdots}  {\dot{s}}
